<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvScore"
            android:layout_marginTop="@dimen/tvMargin"
            android:layout_marginStart="@dimen/tvMargin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTime"
            android:layout_marginTop="@dimen/tvMargin"
            android:layout_marginEnd="@dimen/tvMargin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <Button
            android:text="@string/btnTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnClick"
            android:textSize="@dimen/txtSize"
            android:background="@drawable/img_demo05_btn_bg"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>