<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="order"
                type="caiflyy.pjy.today.ui.demo.CoffeeOrder"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layoutPadding"
            android:id="@+id/constraintLayout"
            tools:context=".MainActivity"
            android:background="@android:color/white">
        <TextView
                android:text="@string/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitle"
                android:textSize="@dimen/titleTextSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/titleTopMargin"
                android:fontFamily="@font/creepster"/>
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:srcCompat="@drawable/img_demo07_coffee"
                android:id="@+id/imageView"
                android:layout_marginTop="30dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintDimensionRatio="1:1"/>
        <CheckBox
                android:text="@string/dessert01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ck01"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@id/imageView"
                app:layout_constraintBottom_toTopOf="@+id/ck02"
                app:layout_constraintVertical_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <CheckBox
                android:text="@string/dessert02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ck02"
                app:layout_constraintTop_toBottomOf="@+id/ck01"
                app:layout_constraintBottom_toTopOf="@+id/ck03"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="16dp"
                app:layout_constraintVertical_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <CheckBox
                android:text="@string/dessert03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ck03"
                app:layout_constraintTop_toBottomOf="@+id/ck02"
                app:layout_constraintBottom_toTopOf="@+id/btnAdd"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="16dp"
                app:layout_constraintVertical_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>
        <Button
                android:text="@string/btnAdd"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/btnAdd"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/ck03"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/tvCount"
                app:layout_constraintVertical_weight="1"
                app:layout_constraintDimensionRatio="w,1:1"/>
        <TextView
                android:text="@{order.count}"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/tvCount"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@+id/btnAdd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/btnSub"
                app:layout_constraintTop_toTopOf="@+id/btnAdd"
                app:layout_constraintBottom_toBottomOf="@+id/btnAdd"/>
        <Button
                android:text="@string/btnSub"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/btnSub"
                app:layout_constraintStart_toEndOf="@+id/tvCount"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvCount"
                app:layout_constraintBottom_toBottomOf="@+id/tvCount"
                app:layout_constraintDimensionRatio="w,1:1"/>
        <TextView
                android:text="@{order.title}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvInfo"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btnOrder"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:background="@drawable/img_demo07_line"
                android:id="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="w,8:1"/>
        <Button
                android:text="生成订单"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnOrder" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>